# rust-test-app

./: Cargo.toml
src/: main.rs
